--- a/SpringRest-mongodb-demo/manifest.yml
+++ b/SpringRest-mongodb-demo/manifest.yml
@@ -1,8 +1,8 @@
 applications:
-- name: Restmongoinstance
+- name: SpringRestMongoTestApp
   memory: 400M
   instances: 1
-  host: Restmongoinstance
+  host: SpringRestMongoTestApp
   buildpack: java_buildpack
   path: ./target/Restmongoinstance-0.1.jar
 
