--- a/Apps/SpringBootJPA-postgre/pom.xml
+++ b/Apps/SpringBootJPA-postgre/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.staterkit.cloud.webapp</groupId>
+	<groupId>com.staterkit</groupId>
 	<artifactId>Springboot-postgre</artifactId>
 	<version>1</version>
 	<packaging>jar</packaging>
